2003-01-12  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03633] Re: cleanup (don't close connection of news server)
	* file.c (FTPhalfclose): deleted
		(loadGeneralFile): closeFTP when doFileSave is done
		(_doFileCopy): return int
		(doFileMove): return int
		(doFileSave): return int
	* ftp.c: rewrite
	* main.c (w3m_exit): disconnectFTP
	* proto.h (_doFileCopy): return int
		(doFileMove): return int
		(doFileSave): return int
		(openFTP): deleted
		(openFTPStream): return InputStream
		(closeFTP): no arg
		(Ftpfclose): disconnectFTP
	* url.c (openFTPstream): deleted

2003-01-11  Fumitoshi UKAI  <ukai@debian.or.jp>

	* fix compiler warnings
	* html.h (UFclose): value computed but not used

2003-01-11  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03632] cleanup (don't close connection of news server)
	* file.c (loadSomething): remove UFclose nntp:,news:
		(loadFile): UFclose
		(loadGeneralFile): always UFclose
	* html.h (UFclose): only reset when ISclose ==0
	* istream.c (ISclose): return int
		(ISfileno): flag IST_UNCLOSE
	* istream.h (ISclose): return int
		(IST_UNCLOSE): added
	* news.c (news_close): reset IST_UNCLOSE
		(news_open): set IST_UNCLOSE

2003-01-11  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03631] display current form item
	* form.c (form2str): rewrite
	* istream.c (ssl_get_certificate): fix typo
	* map.c (follow_map_panel): valign=top
		(append_map_info): valign=top
		(append_link_info): valign=top
		(append_frame_info): <pre_int>
				html_quote ssl_certificate
		(page_info_panel): rewrite, html_quote

2003-01-11  Fumitoshi UKAI  <ukai@debian.or.jp>

	* doc/README.pre_form: update
	* doc-jp/README.pre_form: ditto

2003-01-11  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03630] improved pre_form
	* form.c (pre_form): add re_url, name
		(add_pre_form): add name
				rewrite
		(loadPreForm): add "form"
		(preFormUpdateBuffer): handle re_url

2003-01-11  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>
