@@ -1,4 +1,4 @@
-/* $Id: ftp.c,v 1.22 2003/01/11 15:55:10 ukai Exp $ */
+/* $Id: ftp.c,v 1.23 2003/01/11 16:00:56 ukai Exp $ */
 #include <stdio.h>
 #include <pwd.h>
 #include <Str.h>
@@ -199,7 +199,7 @@ ftp_pasv(FTP ftp)
     switch (family) {
 #ifdef INET6
     case AF_INET6:
-	ftp_command(ftp, "EPSV", NULL, &status);
+	tmp = ftp_command(ftp, "EPSV", NULL, &status);
 	if (status != 229)
 	    return -1;
 	for (p = tmp->ptr + 4; *p && *p != '('; p++) ;
@@ -435,7 +435,7 @@ readFTPDir(ParsedURL *pu)
 	pu->file = "/";
     }
     else {
-	char *realpathname = file_unquote(pu->file);
+	realpathname = file_unquote(pu->file);
 	if (sv_type == UNIXLIKE_SERVER) {
 	    ftp_command(&current_ftp, "CWD", realpathname, &status);
 	    if (status == 250)
